--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Reefton's Friendliest Accomodation"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>Reefton Hideaway</title>
   </head>
   <body>
-    <noscript>Reefton's premium Accomodation</noscript>
+    <noscript>Reefton's Friendliest Accomodation</noscript>
     <div id="root"></div>
   </body>
 </html>
