add meta tag to index for google business, and update email address to reeftonhideaway@gmail.com

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Reefton's Friendliest Accomodation"
     />
+    <!-- To verify domain listing for Google Business -->
+    <meta name="google-site-verification" content="hlzV_dw7siLXr6ANohvk-kAx0Or4IPartB75LHXJeJQ" />
+
     <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.standalone.css"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
