--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="">
+    <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -12,19 +14,25 @@
     <!-- To verify domain listing for Google Business -->
     <meta name="google-site-verification" content="hlzV_dw7siLXr6ANohvk-kAx0Or4IPartB75LHXJeJQ" />
 
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.standalone.css"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> -->
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script> -->
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script> -->
-    <!-- <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/background.jpg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- <script data-main="" src="lib/lightpick.js"></script> -->
-
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>Reefton Hideaway</title>
+    
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/background.jpg"/>
+    <link rel="canonical" href="https://reeftonhideaway.com/"/>
+    <meta property="og:site_name" content="Reefton Hideaway | Reefton's Friendliest Accomodation"/>
+    <meta property="og:title" content="Reefton Hideaway | Reefton's Friendliest Accomodation"/>
+    <meta property="og:url" content="https://reeftonhideaway.com/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="Reefton Hideaway | Reefton's Friendliest Accomodation"/>
+    <meta property="og:image" content="%PUBLIC_URL%/background.jpg"/>
+    <meta property="og:image:width" content="1024"/>
+    <meta property="og:image:height" content="200"/>
+    <meta itemprop="name" content="Reefton Hideaway | Reefton's Friendliest Accomodation"/>
+    <meta itemprop="url" content="https://reeftonhideaway.com/"/>
+    <meta itemprop="description" content="Reefton Hideaway | Reefton's Friendliest Accomodation"/>
+    <meta itemprop="thumbnailUrl" content="%PUBLIC_URL%/background/jpg"/>
+    <title>Reefton Hideaway | Reefton's Friendliest Accomodation</title>
   </head>
   <body>
     <noscript>Reefton's Friendliest Accomodation</noscript>
